[package]
name = "strnum_bitwidth"
version = "0.1.1"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/strnum_bitwidth"
license = "MIT OR Apache-2.0"
description = "calcurate bit width of arbitrary based number string"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
